--- a/Designer/Interface/WebApi/Namespace/Namespace.xaml
+++ b/Designer/Interface/WebApi/Namespace/Namespace.xaml
@@ -1,4 +1,4 @@
-﻿<Grid x:Class="NETPath.Interface.Wcf.Namespace.Namespace" x:ClassModifier="internal"
+﻿<Grid x:Class="NETPath.Interface.WebApi.Namespace.Namespace" x:ClassModifier="internal"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -16,14 +16,13 @@
 	<Grid.ColumnDefinitions>
 		<ColumnDefinition Width="*" />
 		<ColumnDefinition Width="*" />
-		<ColumnDefinition Width="*" />
 	</Grid.ColumnDefinitions>
 	<Grid.RowDefinitions>
 		<RowDefinition Height="95" />
 		<RowDefinition Height="*" />
 		<RowDefinition Height="*" />
 	</Grid.RowDefinitions>
-	<Grid Grid.Row="0" Grid.ColumnSpan="3">
+	<Grid Grid.Row="0" Grid.ColumnSpan="2">
 		<Label Content="Namespace:" Height="Auto" HorizontalAlignment="Left" Margin="5,6,0,0" VerticalAlignment="Top" />
 		<pc:TextBox Height="23" Margin="115,7,5,0" Name="CodeName" Text="{Binding Path=Data.Name}" VerticalAlignment="Top" TextChanged="CodeName_TextChanged" Validate="CodeName_Validate" />
 		<Label Content="Full Namespace:" Height="Auto" HorizontalAlignment="Left" Margin="5,35,0,0" VerticalAlignment="Top" />
@@ -129,7 +128,7 @@
 			</ListBox>
 		</Grid>
 	</GroupBox>
-	<GroupBox Header="Data" Margin="5" Grid.Column="2" Grid.Row="1">
+	<GroupBox Header="Data" Margin="5" Grid.Column="0" Grid.Row="2">
 		<Grid>
 			<ListBox Name="DataList" Margin="5" BorderThickness="0" Background="Transparent" ItemsSource="{Binding Path=Data.Data}" LostFocus="DataList_LostFocus" >
 				<ListBox.Resources>
@@ -178,7 +177,7 @@
 			</ListBox>
 		</Grid>
 	</GroupBox>
-	<GroupBox Header="Enumerations" Margin="5" Grid.Column="0" Grid.Row="2">
+	<GroupBox Header="Enumerations" Margin="5" Grid.Column="1" Grid.Row="2">
 		<Grid>
 			<ListBox Name="EnumList" Margin="5" BorderThickness="0" Background="Transparent" ItemsSource="{Binding Path=Data.Enums}" LostFocus="EnumList_LostFocus" >
 				<ListBox.Resources>
@@ -222,104 +221,6 @@
 							</Setter.Value>
 						</Setter>
 						<EventSetter Event="MouseDoubleClick" Handler="EnumList_MouseDoubleClick"/>
-					</Style>
-				</ListBox.ItemContainerStyle>
-			</ListBox>
-		</Grid>
-	</GroupBox>
-	<GroupBox Header="Hosts" Margin="5" Grid.Column="1" Grid.Row="2">
-		<Grid>
-			<ListBox Name="HostList" Margin="5" BorderThickness="0" Background="Transparent" ItemsSource="{Binding Path=Data.Hosts}" LostFocus="HostList_LostFocus" >
-				<ListBox.Resources>
-					<SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#00FFFFFF"/>
-				</ListBox.Resources>
-				<ListBox.ItemTemplate>
-					<DataTemplate>
-						<Border Name="BG" Background="Transparent" BorderBrush="Transparent" BorderThickness="1" CornerRadius="0" >
-							<Grid >
-								<Grid.ColumnDefinitions>
-									<ColumnDefinition Width="20" />
-									<ColumnDefinition Width="*" />
-								</Grid.ColumnDefinitions>
-								<Grid.RowDefinitions>
-									<RowDefinition Height="Auto" />
-								</Grid.RowDefinitions>
-								<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Host.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform" Grid.Column="0"/>
-								<TextBlock Grid.Column="1" Text="{Binding Path=Name}" Margin="2" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" VerticalAlignment="Center"/>
-							</Grid>
-						</Border>
-						<DataTemplate.Triggers>
-							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True">
-								<Setter TargetName="BG" Property="Background" Value="{StaticResource MouseOverBackgroundColor}" />
-							</DataTrigger>
-							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="True">
-								<Setter TargetName="BG" Property="Background" Value="{StaticResource DefaultSelectionColor}" />
-							</DataTrigger>
-						</DataTemplate.Triggers>
-					</DataTemplate>
-				</ListBox.ItemTemplate>
-				<ListBox.ItemContainerStyle>
-					<Style TargetType="{x:Type ListBoxItem}" >
-						<Setter Property="Padding" Value="0" />
-						<Setter Property="Margin" Value="0" />
-						<Setter Property="HorizontalContentAlignment" Value="Stretch" />
-						<Setter Property="Template">
-							<Setter.Value>
-								<ControlTemplate TargetType="{x:Type ListBoxItem}">
-									<ContentPresenter Margin="{TemplateBinding Padding}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
-								</ControlTemplate>
-							</Setter.Value>
-						</Setter>
-						<EventSetter Event="MouseDoubleClick" Handler="HostList_MouseDoubleClick"/>
-					</Style>
-				</ListBox.ItemContainerStyle>
-			</ListBox>
-		</Grid>
-	</GroupBox>
-	<GroupBox Header="Bindings" Margin="5" Grid.Column="2" Grid.Row="2">
-		<Grid>
-			<ListBox Name="BindingList" Margin="5" BorderThickness="0" Background="Transparent" ItemsSource="{Binding Path=Data.Bindings}" LostFocus="BindingList_LostFocus" >
-				<ListBox.Resources>
-					<SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#00FFFFFF"/>
-				</ListBox.Resources>
-				<ListBox.ItemTemplate>
-					<DataTemplate>
-						<Border Name="BG" Background="Transparent" BorderBrush="Transparent" BorderThickness="1" CornerRadius="0" >
-							<Grid >
-								<Grid.ColumnDefinitions>
-									<ColumnDefinition Width="20" />
-									<ColumnDefinition Width="*" />
-								</Grid.ColumnDefinitions>
-								<Grid.RowDefinitions>
-									<RowDefinition Height="Auto" />
-								</Grid.RowDefinitions>
-								<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Host.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform" Grid.Column="0"/>
-								<TextBlock Grid.Column="1" Text="{Binding Path=Name}" Margin="2" TextWrapping="Wrap" TextTrimming="CharacterEllipsis" VerticalAlignment="Center"/>
-							</Grid>
-						</Border>
-						<DataTemplate.Triggers>
-							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True">
-								<Setter TargetName="BG" Property="Background" Value="{StaticResource MouseOverBackgroundColor}" />
-							</DataTrigger>
-							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="True">
-								<Setter TargetName="BG" Property="Background" Value="{StaticResource DefaultSelectionColor}" />
-							</DataTrigger>
-						</DataTemplate.Triggers>
-					</DataTemplate>
-				</ListBox.ItemTemplate>
-				<ListBox.ItemContainerStyle>
-					<Style TargetType="{x:Type ListBoxItem}" >
-						<Setter Property="Padding" Value="0" />
-						<Setter Property="Margin" Value="0" />
-						<Setter Property="HorizontalContentAlignment" Value="Stretch" />
-						<Setter Property="Template">
-							<Setter.Value>
-								<ControlTemplate TargetType="{x:Type ListBoxItem}">
-									<ContentPresenter Margin="{TemplateBinding Padding}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
-								</ControlTemplate>
-							</Setter.Value>
-						</Setter>
-						<EventSetter Event="MouseDoubleClick" Handler="BindingList_MouseDoubleClick"/>
 					</Style>
 				</ListBox.ItemContainerStyle>
 			</ListBox>
