--- a/Designer/Interface/Wcf/Bindings/WSFederationHTTP.xaml
+++ b/Designer/Interface/Wcf/Bindings/WSFederationHTTP.xaml
@@ -11,7 +11,7 @@
 	<Grid.Resources>
 		<Bindings:HostNameComparisonModeConverter x:Key="HostNameComparisonModeConverter" />
 		<Bindings:WSMessageEncodingConverter x:Key="WSMessageEncodingConverter" />
-		<Bindings:WcfBindingTextEncodingConverter x:Key="WcfBindingTextEncodingConverter" />
+		<Bindings:TextEncodingConverter x:Key="TextEncodingConverter" />
 		<Bindings:WcfSecurityAlgorithmSuiteConverter x:Key="WcfSecurityAlgorithmSuiteConverter" />
 		<Bindings:WSFederationHttpSecurityModeConverter x:Key="WSFederationHttpSecurityModeConverter" />
 		<Bindings:SecurityKeyTypeConverter x:Key="SecurityKeyTypeConverter" />
@@ -120,7 +120,7 @@
 			</ComboBox.Items>
 		</ComboBox>
 		<Label Content="Text Encoding:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="2" />
-		<ComboBox Height="23" Margin="200,5,5,5" SelectedIndex="{Binding Path=Binding.TextEncoding, Converter={StaticResource WcfBindingTextEncodingConverter}}" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="2" >
+		<ComboBox Height="23" Margin="200,5,5,5" SelectedIndex="{Binding Path=Binding.TextEncoding, Converter={StaticResource TextEncodingConverter}}" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="2" >
 			<ComboBox.Items>
 				<ComboBoxItem Content="ASCII" />
 				<ComboBoxItem Content="UTF7" />
